syntax = "proto3";

package auth;
option go_package = ".;pb";

message AuthPayload {
  string access_token = 1;
}
message AuthResponse {
  uint64 customer_id = 1;
  bool expired = 2;
}
service AuthService {
  rpc Auth(AuthPayload) returns (AuthResponse) {};
}